--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -68,12 +68,17 @@
     "publish":"发布任务",
     "succPublish": "恭喜，发布任务成功！",
     "partyAName": "甲方",
+    "partyBName": "乙方",
     "publishTime": "发布时间",
     "applyUserNum": "申请人数",
     "btApplyJob":"申请任务",
     "applyTitle1":"申请任务",
     "applyTitle2":"申请任务时请简要说明自己的优势，个人信息或作品链接，以便RPG秘书处理。",
-    "applyContent":"申请说明"
+    "applyContent":"申请说明",
+    "btDelete":"删除",
+    "btUpdate":"修改",
+    "contractTime":"签约时间"
+
   },
   "syserr":{
     "10024":"用户名或密码错误",
@@ -81,7 +86,14 @@
     "10095": "统计子任务数量错误",
     "10119":"读取未阅读日志错误",
     "10028": "读取用户信息失败",
-    "10048": "保存用户联系信息失败。"
+    "10048": "保存用户联系信息失败。",
+    "10037": "你不能申请自己创建的任务",
+    "10033": "申请任务失败",
+    "10007": "你已经申请过当前任务了，请耐心等待管理员处理。",
+    "10046": "这个手机号码已经被其他用户使用了。",
+    "10120":"读取我发布的新任务错误",
+    "10121":"读取我申请的新任务错误",
+    "10122":"读取任务详情错误"
   }
 
 }
