--- a/src/language/chineseOld.json
+++ b/src/language/chineseOld.json
@@ -333,6 +333,9 @@
     "10116": "修改电话号码失败",
     "10117": "你的实名已经认证，不能修改。若确实要修改，请直接与RPG秘书联系",
     "10118":"读取Email错误",
-    "10119":"读取未阅读日志错误"
+    "10119":"读取未阅读日志错误",
+    "10120":"读取我发布的新任务错误",
+    "10121":"读取我申请的新任务错误",
+    "10122":"读取任务详情错误"
   }
 }
