--- a/src/language/englishOld.json
+++ b/src/language/englishOld.json
@@ -334,6 +334,9 @@
     "10116": "Update phone failed",
     "10117": "Your real name has been authorized already, cannot be changed. If you do need to change it, please contact the RPG secretary",
     "10118":"Read email error",
-    "10119":"Read un-read logs error"
+    "10119":"Read un-read logs error",
+    "10120":"Read my published job information error",
+    "10121":"Read my applied job information error",
+    "10122":"Read job detail error"
   }
 }
