--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -80,6 +80,25 @@
     "contractTime":"签约时间"
 
   },
+  "admin":{
+    "loginPage":{
+      "tip1":"管理员登录",
+      "username":"用户名",
+      "usernamePlaceholder":"请输入用户名",
+      "password":"密码",
+      "passwordPlaceholder":"请输入密码",
+      "btLogin":"登录"
+    },
+    "admin":{},
+    "secretary":{
+      "btAgree":"同意",
+      "btReject":"拒绝",
+      "tipRejectMatch":"确定要拒绝该用户的的申请吗？",
+      "placeholderReject":"请说明拒绝该用户的理由",
+      "tipRejectSuccess":"拒绝用户申请成功",
+      "tipAgreeSuccess":"分配任务成功"
+    }
+  },
   "syserr":{
     "10024":"用户名或密码错误",
     "10031": "读取私有任务失败",
@@ -93,7 +112,8 @@
     "10046": "这个手机号码已经被其他用户使用了。",
     "10120":"读取我发布的新任务错误",
     "10121":"读取我申请的新任务错误",
-    "10122":"读取任务详情错误"
+    "10122":"读取任务详情错误",
+    "10109":"读取新申请的任务失败"
   }
 
 }
