--- a/src/language/englishOld.json
+++ b/src/language/englishOld.json
@@ -337,6 +337,7 @@
     "10119":"Read un-read logs error",
     "10120":"Read my published job information error",
     "10121":"Read my applied job information error",
-    "10122":"Read job detail error"
+    "10122":"Read job detail error",
+    "10123":"Read job apply detail error"
   }
 }
