--- a/src/language/chineseOld.json
+++ b/src/language/chineseOld.json
@@ -336,6 +336,7 @@
     "10119":"读取未阅读日志错误",
     "10120":"读取我发布的新任务错误",
     "10121":"读取我申请的新任务错误",
-    "10122":"读取任务详情错误"
+    "10122":"读取任务详情错误",
+    "10123":"读取任务申请详情错误"
   }
 }
