--- a/src/language/englishOld.json
+++ b/src/language/englishOld.json
@@ -338,6 +338,7 @@
     "10120":"Read my published job information error",
     "10121":"Read my applied job information error",
     "10122":"Read job detail error",
-    "10123":"Read job apply detail error"
+    "10123":"Read job apply detail error",
+    "10124":"Read phone error"
   }
 }
