--- a/src/language/chineseOld.json
+++ b/src/language/chineseOld.json
@@ -338,6 +338,8 @@
     "10121":"读取我申请的新任务错误",
     "10122":"读取任务详情错误",
     "10123":"读取任务申请详情错误",
-    "10124":"读取电话号码失败"
+    "10124":"读取电话号码失败",
+    "10125": "读取用户详细信息错误",
+    "10126": "保存实习信息错误"
   }
 }
