--- a/src/language/chineseOld.json
+++ b/src/language/chineseOld.json
@@ -138,7 +138,9 @@
     "reject": "拒绝验收",
     "accept": "验收通过",
     "rejectRemark": "拒绝验收说明",
-    "acceptRemark": "通过验收说明"
+    "acceptRemark": "通过验收说明",
+    "processResult": "处理结果",
+    "processTime": "处理时间"
   },
   "jobStop": {
     "content": "终止说明",
@@ -340,6 +342,11 @@
     "10123":"读取任务申请详情错误",
     "10124":"读取电话号码失败",
     "10125": "读取用户详细信息错误",
-    "10126": "保存实习信息错误"
+    "10126": "保存实习信息错误",
+    "10127": "只有甲方用户能拒绝验收",
+    "10128": "只有甲方用户能通过验收",
+    "10129": "当前已经有未处理的验收申请，不能重复创建",
+    "10130": "你只能为进行中的任务创建验收日志",
+    "10131": "只有乙方能创建验收申请"
   }
 }
