--- a/src/language/englishOld.json
+++ b/src/language/englishOld.json
@@ -139,7 +139,9 @@
     "reject":"Reject",
     "accept":"Accept",
     "rejectRemark":"Description for reject",
-    "acceptRemark":"Description for accept"
+    "acceptRemark":"Description for accept",
+    "processResult": "Process result",
+    "processTime": "Process time"
   },
   "jobStop":{
     "content":"Stop description",
@@ -341,6 +343,11 @@
     "10123":"Read job apply detail error",
     "10124":"Read phone error",
     "10125": "Read user profile error",
-    "10126": "Save real name error"
+    "10126": "Save real name error",
+    "10127": "Only party A can reject the complete apply",
+    "10128": "Only party A can accept the complete apply",
+    "10129": "There is another un-processed complete apply already, cannot create again",
+    "10130": "Sorry! You only can create complete apply for the job status in progress",
+    "10131": "Sorry! Only party B can create complete apply"
   }
 }
