--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -31,7 +31,8 @@
     "administrator":"RPG管理员",
     "secretary":"RPG秘书",
     "matchJob":"匹配任务",
-    "topUp":"充值"
+    "topUp":"充值",
+    "myAcceptJob": "验收合格任务"
   },
   "user": {
     "username":"登录名",
@@ -132,7 +133,8 @@
       "processTime": "处理时间",
       "unRead": "未阅读",
       "unProcess": "未处理",
-      "processReadTime": "乙方查看处理结果时间"
+      "processReadTime": "乙方查看处理结果时间",
+      "acceptTime": "验收合格时间"
     }
   },
   "admin":{
@@ -183,6 +185,9 @@
     "10128": "只有甲方用户能通过验收",
     "10129": "当前已经有未处理的验收申请，不能重复创建",
     "10130": "你只能为进行中的任务创建验收日志",
-    "10131": "只有乙方能创建验收申请"
+    "10131": "只有乙方能创建验收申请",
+    "10061": "验收通过处理失败",
+    "10132": "读取已验收任务失败",
+    "10032": "创建任务失败"
   }
 }
