--- a/src/language/englishOld.json
+++ b/src/language/englishOld.json
@@ -348,6 +348,7 @@
     "10128": "Only party A can accept the complete apply",
     "10129": "There is another un-processed complete apply already, cannot create again",
     "10130": "Sorry! You only can create complete apply for the job status in progress",
-    "10131": "Sorry! Only party B can create complete apply"
+    "10131": "Sorry! Only party B can create complete apply",
+    "10132": "Read accepted job error"
   }
 }
