--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -101,6 +101,7 @@
     "partyAName": "甲方",
     "partyBName": "乙方",
     "publishTime": "发布时间",
+    "applyTime": "申请时间",
     "applyUserNum": "申请人数",
     "btApplyJob":"申请任务",
     "applyTitle1":"申请任务",
@@ -188,6 +189,7 @@
     "10131": "只有乙方能创建验收申请",
     "10061": "验收通过处理失败",
     "10132": "读取已验收任务失败",
-    "10032": "创建任务失败"
+    "10032": "创建任务失败",
+    "10133": "统计任务变更情况错误"
   }
 }
