--- a/src/language/chineseOld.json
+++ b/src/language/chineseOld.json
@@ -348,6 +348,7 @@
     "10129": "当前已经有未处理的验收申请，不能重复创建",
     "10130": "你只能为进行中的任务创建验收日志",
     "10131": "只有乙方能创建验收申请",
-    "10132": "读取已验收任务失败"
+    "10132": "读取已验收任务失败",
+    "10133": "统计任务变更情况错误"
   }
 }
