--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -190,6 +190,7 @@
     "10061": "验收通过处理失败",
     "10132": "读取已验收任务失败",
     "10032": "创建任务失败",
-    "10133": "统计任务变更情况错误"
+    "10133": "统计任务变更情况错误",
+    "10058": "设置验收日志的阅读时间错误"
   }
 }
