--- a/src/language/english.json
+++ b/src/language/english.json
@@ -109,7 +109,10 @@
     "applyTitle2":"Please subscribe your benefit, why you qualify for this job.",
     "applyContent":"Apply content",
     "btDelete":"Delete",
+    "deleteTip":"The job cannot be restored after delete, are you sure?",
+    "deleteTipSuccess":"The job has been deleted successfully",
     "btUpdate":"Update",
+    "updateTipSucess":"Update job success",
     "contractTime":"Contract Time",
     "tabLog":"Log",
     "tabComplete":"Complete",
@@ -192,6 +195,8 @@
     "10132": "Read accepted job error",
     "10032":"Publish job failed",
     "10133": "Count new job badge error",
-    "10058":"Set job complete log read time error"
+    "10058":"Set job complete log read time error",
+    "10092":"This job has published already, cannot publish duplicate",
+    "10099":"Update my published new job failed"
   }
 }
