--- a/src/language/chineseOld.json
+++ b/src/language/chineseOld.json
@@ -349,6 +349,7 @@
     "10130": "你只能为进行中的任务创建验收日志",
     "10131": "只有乙方能创建验收申请",
     "10132": "读取已验收任务失败",
-    "10133": "统计任务变更情况错误"
+    "10133": "统计任务变更情况错误",
+    "10134": "读取荣誉信息错误"
   }
 }
