--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -215,8 +215,7 @@
     "10133": "统计任务变更情况错误",
     "10058": "设置验收日志的阅读时间错误",
     "10092": "该任务已经发布过了，且正在进行中，不能重复发布",
-    "10099": "修改已发布的新任务失败"
-    "10058": "设置验收日志的阅读时间错误",
+    "10099": "修改已发布的新任务失败",
     "10134": "读取荣誉信息错误"
   }
 }
