Revert "fix some bugs"
This reverts commit 74835da4

--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -53,8 +53,7 @@
     "btSaveUserInfo": "提交",
     "email":{
       "email": "Email",
-      "title":"Email信息",
-      "default":"默认邮箱"
+      "title":"Email信息"
     },
     "phone":{
       "phone": "联系电话",
