--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -221,6 +221,7 @@
     "10058": "设置验收日志的阅读时间错误",
     "10092": "该任务已经发布过了，且正在进行中，不能重复发布",
     "10099": "修改已发布的新任务失败",
-    "10134": "读取荣誉信息错误"
+    "10134": "读取荣誉信息错误",
+    "10104": "该任务已被其他用户处理，不能修改了"
   }
 }
