--- a/src/language/english.json
+++ b/src/language/english.json
@@ -222,6 +222,7 @@
     "10058":"Set job complete log read time error",
     "10092":"This job has published already, cannot publish duplicate",
     "10099":"Update my published new job failed",
-    "10134": "Read honor information error"
+    "10134": "Read honor information error",
+    "10104":"The job has been applied by others, cannot be delete"
   }
 }
