--- a/src/language/english.json
+++ b/src/language/english.json
@@ -1,42 +1,49 @@
 {
-  "common":{
-    "tipTitleQuestion":"Question",
+  "common": {
+    "tipTitleQuestion": "Question",
     "ok": "Ok",
     "cancel": "Cancel",
     "unRead": "Unread",
     "submit": "Submit",
     "status": {
       "unProcess": "Waiting",
-      "reject":"Reject",
-      "agree":"Agree",
-      "matching":"Matching"
+      "reject": "Reject",
+      "agree": "Agree",
+      "matching": "Matching"
     }
   },
-  "navigator":{
-    "signIn":"Sign in",
-    "signOut":"Sign out",
-    "language":"Language",
-    "createTask":"Create New Task",
-    "spotlight":"Spotlight",
-    "myJob":"Job",
-    "dashboard":"Dashboard",
-    "myApply":"My Applied Job",
-    "partyA":"My PartyA Job",
-    "partyB":"My PartyB Job",
-    "myPending":"My Publish",
-    "myTask":"Task",
-    "myProfile":"Profile",
-    "myAccount":"Account",
-    "myHonor":"Honor",
-    "administrator":"Administrator",
-    "secretary":"Secretary",
-    "matchJob":"Match",
-    "topUp":"Top Up",
-    "myAcceptJob": "Accepted Job"
+  "navigator": {
+    "signIn": "Sign in",
+    "signOut": "Sign out",
+    "language": "Language",
+    "createTask": "Create New Task",
+    "spotlight": "Spotlight",
+    "myJob": "Job",
+    "dashboard": "Dashboard",
+    "myApply": "My Applied Job",
+    "partyA": "My PartyA Job",
+    "partyB": "My PartyB Job",
+    "myPending": "My Publish",
+    "myTask": "My Task",
+    "myProfile": "Profile",
+    "myAccount": "Account",
+    "myHonor": "Honor",
+    "administrator": "Administrator",
+    "secretary": "Secretary",
+    "matchJob": "Match",
+    "topUp": "Top Up",
+    "myAcceptJob": "Accepted Job",
+    "publicJobBoard": "Public Jobs",
+    "editTask": "Edit Task",
+    "taskDetail": "Task Detail",
+    "subTaskPage": "Sub Tasks",
+    "publishTask": "Publish Task",
+    "registerByEmail": "Register",
+    "jobDetail": "Job Detail"
   },
   "user": {
-    "username":"Login name",
-    "usernamePlaceholder":"Eail/Phone",
+    "username": "Login name",
+    "usernamePlaceholder": "Eail/Phone",
     "emailPlaceholder": "Please input email",
     "password": "Password",
     "passwordPlaceholder": "Please input password",
@@ -44,31 +51,31 @@
     "password2Placeholder": "Please confirm the password",
     "btRegister": "Register",
     "btLogin": "Sign in",
-    "err2":"Please input email",
-    "err3":"Email format error",
+    "err2": "Please input email",
+    "err3": "Email format error",
     "err1": "The two passwords are not same",
-    "err4":"This email has been used by other user",
-    "realName":"Real Name",
+    "err4": "This email has been used by other user",
+    "realName": "Real Name",
     "btVerifyRealname": "Certify Real Name",
     "btSaveUserInfo": "Confirm",
-    "email":{
+    "email": {
       "email": "Email",
-      "title":"Email information"
+      "title": "Email information"
     },
-    "phone":{
-      "phone":"Contact Phone",
-      "title":"Phone information",
-      "verify":"Verify",
-      "unverifyTag":"Unverify",
-      "verifyTag":"Verified",
-      "createdTime":"Created Time",
-      "default":"Default",
-      "btSetDefault":"Set Default"
+    "phone": {
+      "phone": "Contact Phone",
+      "title": "Phone information",
+      "verify": "Verify",
+      "unverifyTag": "Unverify",
+      "verifyTag": "Verified",
+      "createdTime": "Created Time",
+      "default": "Default",
+      "btSetDefault": "Set Default"
     },
-    "realname":{
-      "title":"Real name information",
-      "realName":"Real Name",
-      "realNameCertify":"Certify",
+    "realname": {
+      "title": "Real name information",
+      "realName": "Real Name",
+      "realNameCertify": "Certify",
       "idCardNo": "ID Card No.",
       "sex": "Sex",
       "male": "Male",
@@ -78,14 +85,14 @@
       "tipSaveError": "Save profile error"
     },
     "account": {
-      "createdTime":"Created Time",
+      "createdTime": "Created Time",
       "TOP_UP": "Top up",
       "WITHDRAW": "Withdraw",
       "PUBLISH": "Publish",
       "ACCEPT": "Accept job",
       "REFUND": "Refund",
-      "amount":"Amount",
-      "type":"Type",
+      "amount": "Amount",
+      "type": "Type",
       "balance": "Balance",
       "income": "Income",
       "outgoing": "Costing"
@@ -95,69 +102,69 @@
       "balance": "Honor",
       "balanceIn": "Honor In",
       "balanceOut": "Honor Out",
-      "createdTime":"Created Time",
+      "createdTime": "Created Time",
       "honorPoint": "Honor Point",
       "honorType": "Type",
       "JOB_ACCEPTED": "Job Acceptance",
       "CREATE_SPOTLIGHT": "Spotlight"
     }
   },
-  "task":{
-    "btCreate":"Create Task",
-    "title":"Title",
-    "code":"Code",
-    "detail":"Detail",
-    "days":"Days",
-    "price":"Price",
-    "createdUserName":"Created User",
-    "createdTime":"Created Time",
-    "delete":"Delete",
-    "tipDelete":"Are you sure you want to delete this task?",
-    "update":"Update",
-    "subTask":"Sub task",
-    "freelancer":"Publish",
-    "complete":"Complete",
-    "addSubTaskTitle":"Create sub task",
-    "tipSubTask1":"You must input sub task title"
+  "task": {
+    "btCreate": "Create Task",
+    "title": "Title",
+    "code": "Code",
+    "detail": "Detail",
+    "days": "Days",
+    "price": "Price",
+    "createdUserName": "Created User",
+    "createdTime": "Created Time",
+    "delete": "Delete",
+    "tipDelete": "Are you sure you want to delete this task?",
+    "update": "Update",
+    "subTask": "Sub task",
+    "freelancer": "Publish",
+    "complete": "Complete",
+    "addSubTaskTitle": "Create sub task",
+    "tipSubTask1": "You must input sub task title"
   },
-  "job":{
-    "publish":"Publish",
+  "job": {
+    "publish": "Publish",
     "succPublish": "Publish success",
     "partyAName": "Party A",
     "partyBName": "Party B",
     "publishTime": "Publish Time",
     "applyTime": "Apply Time",
     "applyUserNum": "Apply",
-    "btApplyJob":"Apply job",
-    "applyTitle1":"Apply This Job",
-    "applyTitle2":"Please subscribe your benefit, why you qualify for this job.",
-    "applyContent":"Apply content",
-    "btDelete":"Delete",
-    "deleteTip":"The job cannot be restored after delete, are you sure?",
-    "deleteTipSuccess":"The job has been deleted successfully",
-    "btUpdate":"Update",
-    "updateTipSucess":"Update job success",
-    "contractTime":"Contract Time",
-    "tabLog":"Log",
-    "tabComplete":"Complete",
-    "tabStop":"Stop",
-    "tabSpotlight":"Spotlight",
-    "tbCreateLog":"Create Log",
+    "btApplyJob": "Apply job",
+    "applyTitle1": "Apply This Job",
+    "applyTitle2": "Please subscribe your benefit, why you qualify for this job.",
+    "applyContent": "Apply content",
+    "btDelete": "Delete",
+    "deleteTip": "The job cannot be restored after delete, are you sure?",
+    "deleteTipSuccess": "The job has been deleted successfully",
+    "btUpdate": "Update",
+    "updateTipSucess": "Update job success",
+    "contractTime": "Contract Time",
+    "tabLog": "Log",
+    "tabComplete": "Complete",
+    "tabStop": "Stop",
+    "tabSpotlight": "Spotlight",
+    "tbCreateLog": "Create Log",
     "log": {
       "content": "Content",
       "btCreate": "Create",
       "createdTime": "Created Time",
       "readTime": "Read Time"
     },
-    "jobComplete":{
-      "content":"Complete description",
-      "create":"Create complete log",
-      "createdTime":"Created time",
-      "readTime":"Read time",
-      "reject":"Reject",
-      "accept":"Accept",
-      "rejectRemark":"Description for reject",
-      "acceptRemark":"Description for accept",
+    "jobComplete": {
+      "content": "Complete description",
+      "create": "Create complete log",
+      "createdTime": "Created time",
+      "readTime": "Read time",
+      "reject": "Reject",
+      "accept": "Accept",
+      "rejectRemark": "Description for reject",
+      "acceptRemark": "Description for accept",
       "processResult": "Process result",
       "processTime": "Process time",
       "unRead": "Unread",
@@ -166,48 +173,48 @@
       "acceptTime": "Accepted time"
     }
   },
-  "admin":{
-    "loginPage":{
-      "tip1":"Admin login page",
-      "username":"User name",
-      "usernamePlaceholder":"Please input username",
-      "password":"Password",
-      "passwordPlaceholder":"Please input password",
-      "btLogin":"Login"
+  "admin": {
+    "loginPage": {
+      "tip1": "Admin login page",
+      "username": "User name",
+      "usernamePlaceholder": "Please input username",
+      "password": "Password",
+      "passwordPlaceholder": "Please input password",
+      "btLogin": "Login"
     },
-    "admin":{},
-    "secretary":{
-      "btAgree":"Agree",
-      "btReject":"Reject",
-      "tipAgreeMatch":"Are you sure to match this user？",
-      "tipRejectMatch":"Are you sure to reject this user's application？",
-      "placeholderReject":"Please describe why you reject the application",
-      "tipRejectSuccess":"Reject apply success",
-      "tipAgreeSuccess":"Agree apply success",
-      "applyTime":"Apply Time",
-      "price":"Job Price",
-      "applyProcessResult":"Apply Result",
-      "jobStatus":"Job Status",
-      "applyUsername":"Apply User"
+    "admin": {},
+    "secretary": {
+      "btAgree": "Agree",
+      "btReject": "Reject",
+      "tipAgreeMatch": "Are you sure to match this user？",
+      "tipRejectMatch": "Are you sure to reject this user's application？",
+      "placeholderReject": "Please describe why you reject the application",
+      "tipRejectSuccess": "Reject apply success",
+      "tipAgreeSuccess": "Agree apply success",
+      "applyTime": "Apply Time",
+      "price": "Job Price",
+      "applyProcessResult": "Apply Result",
+      "jobStatus": "Job Status",
+      "applyUsername": "Apply User"
     }
   },
-  "syserr":{
-    "10024":"Username or password error",
-    "10031":"Read task failed",
-    "10095":"Count sub task error",
-    "10119":"Read un-read logs error",
-    "10028":"Read user information failed",
-    "10048":"Save user contact information error.",
-    "10037":"You cannot apply the job that created by yourself",
-    "10033":"Apply job failed",
-    "10007":"You have applied this job already, please waiting for the process.",
-    "10046":"This phone has been occupied by other users.",
-    "10120":"Read my published job information error",
-    "10121":"Read my applied job information error",
-    "10122":"Read job detail error",
-    "10109":"Read new apply job failed",
-    "10123":"Read job apply detail error",
-    "10124":"Read phone error",
+  "syserr": {
+    "10024": "Username or password error",
+    "10031": "Read task failed",
+    "10095": "Count sub task error",
+    "10119": "Read un-read logs error",
+    "10028": "Read user information failed",
+    "10048": "Save user contact information error.",
+    "10037": "You cannot apply the job that created by yourself",
+    "10033": "Apply job failed",
+    "10007": "You have applied this job already, please waiting for the process.",
+    "10046": "This phone has been occupied by other users.",
+    "10120": "Read my published job information error",
+    "10121": "Read my applied job information error",
+    "10122": "Read job detail error",
+    "10109": "Read new apply job failed",
+    "10123": "Read job apply detail error",
+    "10124": "Read phone error",
     "10125": "Read user profile error",
     "10126": "Save real name error",
     "10127": "Only party A can reject the complete apply",
@@ -215,14 +222,14 @@
     "10129": "There is another un-processed complete apply already, cannot create again",
     "10130": "Sorry! You only can create complete apply for the job status in progress",
     "10131": "Sorry! Only party B can create complete apply",
-    "10061":"Accept job complete error",
+    "10061": "Accept job complete error",
     "10132": "Read accepted job error",
-    "10032":"Publish job failed",
+    "10032": "Publish job failed",
     "10133": "Count new job badge error",
-    "10058":"Set job complete log read time error",
-    "10092":"This job has published already, cannot publish duplicate",
-    "10099":"Update my published new job failed",
+    "10058": "Set job complete log read time error",
+    "10092": "This job has published already, cannot publish duplicate",
+    "10099": "Update my published new job failed",
     "10134": "Read honor information error",
-    "10104":"The job has been applied by others, cannot be delete"
+    "10104": "The job has been applied by others, cannot be delete"
   }
 }
